[ignore] Support spacing="compact|normal" for variablelist. Links fixed.
svn path=/apps/doc/; revision=17454

--- a/resources/css/exist.css
+++ b/resources/css/exist.css
@@ -307,6 +307,14 @@ form { margin: 20px 0; }
     margin-bottom: .4em;
 }
 
+.content dl.wide dt {
+    width: 240px;
+}
+
+.content dl.wide dd {
+    margin-left: 255px;
+}
+
 #content .content dt {
     font-weight: bold;
 }
